<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".SettingsActivity" >
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content">
	    <TextView
	        android:layout_weight="1"
	        android:id="@+id/zipcode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/zipcode" />

	    <EditText
	        android:layout_weight="1"
	        android:id="@+id/editText1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="number" >

        <requestFocus android:layout_width="wrap_content" />

    </EditText>
	</LinearLayout>
    
    
    <LinearLayout 
        android:paddingTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content">
        
    
	    <Button
	        android:layout_weight="1"
	        android:id="@+id/celcius"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/c" />
	    <Button
	        android:layout_weight="1"
	        android:id="@+id/fahrenheit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/f" />
	</LinearLayout>
	
    <LinearLayout 
        android:paddingTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
	        android:layout_weight="1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/selectDays" />
        <Spinner
          	android:layout_weight="1"  	
	        android:id="@+id/no_of_days"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	     >

	    <Button
	        android:layout_alignParentBottom="true"
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
	</RelativeLayout>

    

</LinearLayout>