<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

    
	<LinearLayout 
	    android:id="@+id/linearLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center" >
	    	<TextView	            
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/today"
	            android:textSize="20sp" >
	        </TextView>
	        
	         <TextView
	            android:id="@+id/currentWeather1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/currentWeather"
	            android:textSize="20sp" >
	        </TextView>
	    	
	        <ImageView
		        android:id="@+id/imageView0"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:contentDescription="@string/image"
		        android:maxHeight="50dp"
		        android:maxWidth="50dp" />
	        <TextView
	            android:id="@+id/weatherC"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unknown"
	            android:textSize="20sp" >
	        </TextView>
	        
	        <View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>

	        <TextView
	            android:id="@+id/TextView05"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginRight="5dip"
	            android:text="@string/currentLocation"
	            android:textSize="20sp" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/TextView06"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unknown"
	            android:textSize="20sp" >
	        </TextView>
	        <View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginRight="5dip"
	            android:text="@string/day1"
	            android:textSize="20sp" >
	        </TextView>
	        
	        <View
			    android:layout_width="1dp"
			    android:layout_height="match_parent"
			    android:background="#000000" />
	
	        <TextView
	            android:id="@+id/day1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unknown"
	            android:textSize="20sp" >
	        </TextView>
	      
	    
	      <ImageView
		        android:id="@+id/imageView1"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:contentDescription="@string/image"
		        android:maxHeight="50dp"
		        android:maxWidth="50dp" />
		<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
	
	        <TextView
	           
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginRight="5dip"
	            android:text="@string/day2"
	            android:textSize="20sp" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/day2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unknown"
	            android:textSize="20sp" >
	            
	        </TextView>
	    
	      <ImageView
		        android:id="@+id/imageView2"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:contentDescription="@string/image"
		        android:maxHeight="50dp"
		        android:maxWidth="50dp" />
	      <View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
	
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginRight="5dip"
	            android:text="@string/day3"
	            android:textSize="20sp" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/day3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unknown"
	            android:textSize="20sp" >
	        </TextView>
	
	    		<ImageView
		        android:id="@+id/imageView3"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:contentDescription="@string/image"
		        android:maxHeight="50dp"
		        android:maxWidth="50dp" />
	    		<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
	    	 <TextView
	    	   	android:id="@+id/four" 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginRight="5dip"
	            android:textSize="20sp" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/day4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unknown"
	            android:textSize="20sp" >
	        </TextView>
	
	    		<ImageView
		        android:id="@+id/imageView4"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:contentDescription="@string/image"
		        android:maxHeight="50dp"
		        android:maxWidth="50dp" />
	    		<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
	 <TextView
	     		android:id="@+id/five"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginRight="5dip"
	            android:textSize="20sp" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/day5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unknown"
	            android:textSize="20sp" >
	        </TextView>
	
	    		<ImageView
		        android:id="@+id/imageView5"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:contentDescription="@string/image"
		        android:maxHeight="50dp"
		        android:maxWidth="50dp" />
	    		<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
	    		
	    		 <TextView
	    		     android:id="@+id/six"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginRight="5dip"
	            android:textSize="20sp" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/day6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unknown"
	            android:textSize="20sp" >
	        </TextView>
	
	    		<ImageView
		        android:id="@+id/imageView6"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:contentDescription="@string/image"
		        android:maxHeight="50dp"
		        android:maxWidth="50dp" />
	    		<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
	    		
	    		 <TextView
	    		     android:id="@+id/seven"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginRight="5dip"
	            android:textSize="20sp" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/day7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unknown"
	            android:textSize="20sp" >
	        </TextView>
	
	    		<ImageView
		        android:id="@+id/imageView7"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:contentDescription="@string/image"
		        android:maxHeight="50dp"
		        android:maxWidth="50dp" />
	    		
	    		<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
	    		
	    	<TextView
	    	    android:id="@+id/eight"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginRight="5dip"
	            android:textSize="20sp" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/day8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unknown"
	            android:textSize="20sp" >
	        </TextView>
	
	    		<ImageView
		        android:id="@+id/imageView8"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:contentDescription="@string/image"
		        android:maxHeight="50dp"
		        android:maxWidth="50dp" />
	    		
	    		<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
	    		
	    		 <TextView
	    		     android:id="@+id/nine"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginRight="5dip"
	            android:textSize="20sp" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/day9"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/unknown"
	            android:textSize="20sp" >
	        </TextView>
	
	    		<ImageView
		        android:id="@+id/imageView9"
		        android:layout_width="50dp"
		        android:layout_height="50dp"
		        android:contentDescription="@string/image"
		        android:maxHeight="50dp"
		        android:maxWidth="50dp" />
	    		
	    		<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>
	    		
	    		
	 
	    		
	</LinearLayout> 	
</ScrollView>